--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/messageUI.js",
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-markdown": "^4.0.8"
   },
   "scripts": {
     "start": "rollup -c rollup.config.js",
